package edu.sandiego.comp305;

public interface RandomProvider {
    public abstract double nextDouble();
}
