@startuml World Cup Simulator
interface PredictionStrategy {
    + getProbability(home: Team, away: Team) : double
}
interface RandomProvider {
    + nextDouble() : double
}
class CSVLoader {
    - COLUMNS_OF_FILE : int
    - filePath : String
    + loadTeams() : List<Team>
    - parseLine(line: String) : Team
}
class Team {
    - ranking : int
    - countryName : String
    - countryCode : String
    - rating : int
    - totalGames : int
    - totalWins : int
    - totalLosses : int
    - goalsFor : int
    - goalsAgainst : int
    + getRating() : int
    + getWinRate() : double
    + getGoalDifference() : int
    + getGoalsFor() : int
    + getGoalsAgainst() : int
    + getTotalGames() : int
    + getTotalWins() : int
    + getTotalLosses() : int
    + getRanking() : int
    + getCountryName() : String
    + getCountryCode() : String
}
class EloStrategy {
    - ELO_SCALE : double
    - ELO_BASE : double
    - WEIGHT_ELO : double
    - WEIGHT_WINRATE : double
    - WEIGHT_GOALDIFF : double
    - WEIGHT_DEFENSE_ATT : double
    - GOALDIFF_SHIFT : double
    - EPSILON : double
    + getProbability(home: Team, away: Team) : double
    - elo(home: Team, away: Team) : double
    - winRate(home: Team, away: Team) : double
    - goalDiff(home: Team, away: Team) : double
    - defenseAtt(home: Team, away: Team) : double
}
class MatchResult {
    - winner : Team
    - homeTeam : Team
    - awayTeam : Team
    - homeGoals : int
    - awayGoals : int
    - isDraw : boolean
    + getWinner() : Team
    + getHomeTeam() : Team
    + getAwayTeam() : Team
    + getIsDraw() : boolean
    + getHomeGoals() : int
    + getAwayGoals() : int
}
class Match {
    - DRAW_SHARE : double
    - BASE_GOALS : double
    - PENALTY_WIN_PROBABILITY : double
    - homeTeam : Team
    - awayTeam : Team
    - strategy : PredictionStrategy
    - isKnockout : boolean
    - random : RandomProvider
    + play() : MatchResult
    + simulatePenalties() : Team
    - simulateGoals(lambda: double) : int
}
class Standings {
    - team : Team
    - points : int
    - goalsFor : int
    - goalsAgainst : int
    + addResult(result: MatchResult) : void
    + getPoints() : int
    + getGoalDiff() : int
    + getGoalsFor() : int
    + getGoalsAgainst() : int
    + getTeam() : Team
    + reset() : void
}
class Group {
    - name : String
    - teams : List<Team>
    - standings : List<Standings>
    + playGroupStage() : void
    + getQualifiers() : List<Team>
    + getStandings() : List<Standings>
    + getThirdPlace() : Standings
    + getTeams() : List<Team>
    + getName() : String
    + reset() : void
}
class Bracket {
    - MATCH_PAIR : int
    - teams : List<Team>
    - round : int
    - strategy : PredictionStrategy
    + playRound() : List<Team>
    + getWinner() : Team
    + getCurrentRound() : int
    - playMatch(homeTeam: Team, awayTeam: Team) : Team
}
class Tournament {
    - SINGLE_ELIMINATION : int
    - groups : List<Group>
    - bracket : Bracket
    - strategy : PredictionStrategy
    + runGroupStage() : void
    + buildBracket() : void
    + runKnockout() : Team
    + reset() : void
    - playNextRound(teams: List<Team>) : List<Team>
    - getBestThirdPlace(standings: List<Standings>) : List<Team>
    - findBestThird(remaining: List<Standings>) : Standings
    - isBetter(current: Standings, best: Standings) : boolean
}
class SimulatorResults {
    - winCounts : Map<Team, Integer>
    - totalRuns : int
    + recordWin(team: Team) : void
    + getWinProbability(team: Team) : double
    + getTotalRuns() : int
    + printResults() : void
    - printTeamResult(team: Team) : void
    - findTopTeam(remaining: List<Team>) : Team
}
class Simulator {
    + DEFAULT_SIMULATIONS : int
    - tournament : Tournament
    - result : SimulatorResults
    + runSimulations(numSimRun: int) : void
}
class TournamentFactory {
    - TournamentFactory()
    + {static} buildGroups(teams: List<Team>) : List<Group>
    - {static} buildTeamMap(teams: List<Team>) : Map<String, Team>
    - {static} buildGroup(name: String, teamMap: Map<String, Team>, codes: List<String>) : Group
}
class WorldCupRunner {
    - WorldCupRunner()
    + {static} main(args: String[]) : void
}

' Inheritance / Implementation
EloStrategy ..|> PredictionStrategy

' Dependencies / Uses
CSVLoader ..> Team : creates
TournamentFactory ..> Group : creates
TournamentFactory ..> Team : uses
WorldCupRunner ..> CSVLoader : uses
WorldCupRunner ..> TournamentFactory : uses
WorldCupRunner ..> Tournament : uses
WorldCupRunner ..> SimulatorResults : uses
WorldCupRunner ..> Simulator : uses

' Associations
Match --> Team
Match --> PredictionStrategy
Match --> RandomProvider
Match ..> MatchResult : creates

Standings --> Team
Standings ..> MatchResult : reads

Group *-- Standings
Group o-- Team

Bracket o-- Team
Bracket --> PredictionStrategy
Bracket ..> Match : creates

Tournament *-- Group
Tournament o-- Bracket
Tournament --> PredictionStrategy

Simulator --> Tournament
Simulator --> SimulatorResults
@enduml